--- a/views/documents.html
+++ b/views/documents.html
@@ -19,7 +19,7 @@
 	</div>
 	<div id="container">
 	<div ng-repeat="article in documents">
-		<a href="#document/{{ article._id }}">
+		<a href="#document/id/{{ article._id }}">
 			<h3 id="article_title">{{ article.title }}</h3>
 	      	<p id="article_subtitle"/>{{ article.subtitle }}</p>
 		</a>
