--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ a{
 .btn-primary:hover{background:rgba(0,0,0,0);border-color:#57ad68;color:#468c54}
 
 #container {
-	width: 800px;
+	max-width: 800px;
 	margin: 0px auto;
 }
 
