--- a/views/create-document.html
+++ b/views/create-document.html
@@ -5,7 +5,7 @@
   		<div id="sider" class="sider">
   			<ul class="sider_list">
   				<li class="sider_list_item"><a class="sider_list_item_btn" href="#">Home</a></li>
-  				<li class="sider_list_item"><a class="sider_list_item_btn" href="#">Tạo mới</a></li>
+  				<li class="sider_list_item"><a class="sider_list_item_btn" href="#document/pre-create">Tạo mới</a></li>
   				<li class="sider_list_item"><a class="sider_list_item_btn" href="#">Bản nháp</a></li>
   				<li class="sider_list_item"><a class="sider_list_item_btn" href="#">Mục tiêu</a></li>
   				<li class="sider_list_item"><a class="sider_list_item_btn" href="#">Bộ sưu tập</a></li>
@@ -19,10 +19,12 @@
 					
 				</div>
 				<div class="top_bar_block align_right">
-					<button class="btn btn-delete btn-danger" title="Delete">Xóa</button>
-					<button class="btn btn-history btn-normal" title="History">Lịch sử</button>
-					<button class="btn btn-share-draft btn-normal" title="Share Draft">Chia sẻ bản nháp</button>
-					<button class="btn btn-publish btn-primary" ng-click="publishArticle()" title="Publish">Xuất bản</button>
+					<button class="btn btn-action btn-new-section btn-primary" ng-show="categoryType" ng-click="newSection()" title="Publish">Chương mới</button>
+					<button class="btn btn-action btn-delete btn-danger" title="Delete">Xóa</button>
+					<button class="btn btn-action btn-history btn-normal" title="History">Lịch sử</button>
+					<button class="btn btn-action btn-share-draft btn-normal" title="Share Draft">Chia sẻ bản nháp</button>
+					<button class="btn btn-action btn-publish btn-normal" ng-click="saveSection()" title="Publish">Lưu lại</button>
+					<button class="btn btn-action btn-publish btn-primary" ng-click="publish()" title="Publish">Xuất bản</button>
 				</div>
 	  		</div>
 			<div id="container">
@@ -31,7 +33,7 @@
 						<form name="write_article" id="write_article">
 							<h1 id="article_title" contenteditable="true" ng-model="title" placeholder="Tiêu đề" autofocus></h1>
 							<h2 id="article_subtitle" contenteditable="true" ng-model="subtitle" placeholder="tiêu đề phụ" /></h2>
-				      		<div id="article_content" medium-editor ng-model="content" spellcheck="false" data-placeholder="viết gì đó"></div>
+				      		<div ng-keyup="saveParagraph($event.keyCode)" id="article_content" medium-editor ng-model="content" spellcheck="false" data-placeholder="viết gì đó"></div>
 					  	</form>
 				  	</div>
 				</div>
