--- a/views/publish-document.html
+++ b/views/publish-document.html
@@ -5,6 +5,15 @@
 		<div class="overlay-actions ">
 			<div class="element-set-vertical">
 				<div class="element">Thời gian
+					<div class="dropdown">
+					  <a class="dropdown-toggle" id="dropdown2" role="button" data-toggle="dropdown" data-target="#" href="#">
+					    <div class="input-group"><input type="text" class="form-control" data-ng-model="data.dateDropDownInput"><span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+					    </div>
+					  </a>
+					  <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+					    <datetimepicker data-ng-model="data.dateDropDownInput" data-datetimepicker-config="{ dropdownSelector: '#dropdown2' }"/>
+					  </ul>
+					</div>
 				</div>
 				<div class="element">Giá
 				</div>
