--- a/views/create-document.html
+++ b/views/create-document.html
@@ -4,7 +4,7 @@
   	<snap-drawer>
   		<div id="sider" class="sider">
   			<ul class="sider_list">
-  				<li class="sider_list_item"><a class="sider_list_item_btn" href="#">Home</a></li>
+  				<li class="sider_list_item"><a class="sider_list_item_btn" href="#documents">Home</a></li>
   				<li class="sider_list_item"><a class="sider_list_item_btn" href="#document/pre-create">Tạo mới</a></li>
   				<li class="sider_list_item"><a class="sider_list_item_btn" href="#">Bản nháp</a></li>
   				<li class="sider_list_item"><a class="sider_list_item_btn" href="#">Mục tiêu</a></li>
