--- a/views/document.html
+++ b/views/document.html
@@ -4,10 +4,13 @@
 <snap-drawer>
   <div id="sider" class="sider">
     <ul class="sider_list">
-      <li class="sider_list_item"><a class="sider_list_item_btn" href="#">Home</a></li>
-      <li class="sider_list_item"><a class="sider_list_item_btn" href="#acount">Tài khoản</a></li>
+      <li class="sider_list_item"><a class="sider_list_item_btn" href="#documents">Home</a></li>
+      <li ng-if="user" class="sider_list_item"><a class="sider_list_item_btn" href="#acount">Tài khoản</a></li>
+      <li ng-if="!user" class="sider_list_item"><a class="sider_list_item_btn" href="#login">Đăng nhập</a></li>
+      <li class="sider_list_item"><a class="sider_list_item_btn" href="#friend">Bạn bè</a></li>
+      <li class="sider_list_item"><a class="sider_list_item_btn" href="#message">Tin nhắn</a></li>
       <li class="sider_list_item"><a class="sider_list_item_btn" href="#collections">Bộ sưu tập</a></li>
-      <li class="sider_list_item"><a class="sider_list_item_btn" href="#">Bài viết mới</a></li>
+      <li class="sider_list_item"><a class="sider_list_item_btn" href="#document/pre-create">Bài viết mới</a></li>
       <li class="sider_list_item" ng-show="table_content">
         <a class="sider_list_item_btn" href="#">Mục lục</a>
         <ul class="toc_list" ng-repeat="section in sections">
