--- a/views/documents.html
+++ b/views/documents.html
@@ -4,8 +4,11 @@
 <snap-drawer>
   <div id="sider" class="sider">
     <ul class="sider_list">
-      <li class="sider_list_item"><a class="sider_list_item_btn" href="#">Home</a></li>
-      <li class="sider_list_item"><a class="sider_list_item_btn" href="#account">Tài khoản</a></li>
+      <li class="sider_list_item"><a class="sider_list_item_btn" href="#documents">Home</a></li>
+      <li ng-if="user" class="sider_list_item"><a class="sider_list_item_btn" href="#acount">Tài khoản</a></li>
+      <li ng-if="!user" class="sider_list_item"><a class="sider_list_item_btn" href="#login">Đăng nhập</a></li>
+      <li class="sider_list_item"><a class="sider_list_item_btn" href="#friend">Bạn bè</a></li>
+      <li class="sider_list_item"><a class="sider_list_item_btn" href="#message">Tin nhắn</a></li>
       <li class="sider_list_item"><a class="sider_list_item_btn" href="#collections">Bộ sưu tập</a></li>
       <li class="sider_list_item"><a class="sider_list_item_btn" href="#document/pre-create">Bài viết mới</a></li>
     </ul>
