--- a/views/create-document.html
+++ b/views/create-document.html
@@ -27,7 +27,7 @@
 					<button class="btn btn-action btn-publish btn-primary" ng-click="publish()" title="Publish">Xuất bản</button>
 				</div>
 	  		</div>
-			<div id="container">
+			<div class="container">
 			    <div>
 					<div>
 						<form name="write_article" id="write_article">
