--- a/views/publish-document.html
+++ b/views/publish-document.html
@@ -1,23 +1,38 @@
+<div class="container">
 <div class="parent-vertical-box">
 	<div class="login-box vertical-box">
 		<h3 class="overlay-title">Mạng Văn Học</h3>
 		<div class="overlay-content">Thông tin xuất bản</div>
 		<div class="overlay-actions ">
 			<div class="element-set-vertical">
-				<div class="element">Thời gian
-					<div class="dropdown">
-					  <a class="dropdown-toggle" id="dropdown2" role="button" data-toggle="dropdown" data-target="#" href="#">
-					    <div class="input-group"><input type="text" class="form-control" data-ng-model="data.dateDropDownInput"><span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-					    </div>
-					  </a>
-					  <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-					    <datetimepicker data-ng-model="data.dateDropDownInput" data-datetimepicker-config="{ dropdownSelector: '#dropdown2' }"/>
-					  </ul>
+				<div class="element control-group row">
+					<label class="control-label .col-md-4" for="textinput">Thời gian</label>
+					<div class="controls .col-md-8">
+						<div class="dropdown">
+						  <a class="dropdown-toggle" id="dropdown2" role="button" data-toggle="dropdown">
+						    <div class="input-group"><input type="text" class="form-control" data-ng-model="data.dateDropDownInput"><span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+						    </div>
+						  </a>
+						  <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+						    <datetimepicker data-ng-model="data.dateDropDownInput" data-datetimepicker-config="{ dropdownSelector: '#dropdown2' }"/>
+						  </ul>
+						</div>
 					</div>
 				</div>
-				<div class="element">Giá
+				<div class="element control-group row">
+					<label class="control-label" for="textinput">Giá</label>
+					<div class="controls">
+				    	<input id="price" name="price" type="text" class="input-xlarge">
+				    <p class="help-block">Giá để đọc bài viết này</p>
+				  </div>
 				</div>
+			</div>
+
+			<div class="element last-element">
+				<button ng-click="back()" class="btn btn-step btn-back">Quay lại</button>
+				<button ng-click="next()" class="btn btn-step btn-next">Tiếp tục</button>
 			</div>
 		</div>
 	</div>
+</div>
 </div>
