--- a/views/editor.html
+++ b/views/editor.html
@@ -9,6 +9,8 @@
   				<li class="sider_list_item"><a class="sider_list_item_btn" href="#">Bản nháp</a></li>
   				<li class="sider_list_item"><a class="sider_list_item_btn" href="#">Mục tiêu</a></li>
   				<li class="sider_list_item"><a class="sider_list_item_btn" href="#collection">Bộ sưu tập</a></li>
+  				<li class="sider_list_item"><a class="sider_list_item_btn" href="#my-document">Bài viết của tôi</a></li>
+      			<li class="sider_list_item"><a class="sider_list_item_btn" href="#document/pre-create">Viết bài mới</a></li>
   			</ul>
   		</div>
   	</snap-drawer>
