--- a/views/documents.html
+++ b/views/documents.html
@@ -4,10 +4,12 @@
       <li class="sider_list_item"><a class="sider_list_item_btn" href="#documents">Home</a></li>
       <li ng-if="user" class="sider_list_item"><a class="sider_list_item_btn" href="#account">Tài khoản</a></li>
       <li ng-if="!user" class="sider_list_item"><a class="sider_list_item_btn" href="#login">Đăng nhập</a></li>
-      <li class="sider_list_item"><a class="sider_list_item_btn" href="#friend">Bạn bè</a></li>
-      <li class="sider_list_item"><a class="sider_list_item_btn" href="#message">Tin nhắn</a></li>
-      <li class="sider_list_item"><a class="sider_list_item_btn" href="#collection">Bộ sưu tập</a></li>
-      <li class="sider_list_item"><a class="sider_list_item_btn" href="#document/pre-create">Bài viết mới</a></li>
+      <li ng-if="!user" class="sider_list_item"><a class="sider_list_item_btn" href="#register-form">Đăng kí</a></li>
+      <li ng-if="user" class="sider_list_item"><a class="sider_list_item_btn" href="#friend">Bạn bè</a></li>
+      <li ng-if="user" class="sider_list_item"><a class="sider_list_item_btn" href="#message">Tin nhắn</a></li>
+      <li ng-if="user" class="sider_list_item"><a class="sider_list_item_btn" href="#collection">Bộ sưu tập</a></li>
+      <li ng-if="user" class="sider_list_item"><a class="sider_list_item_btn" href="#my-document">Bài viết của tôi</a></li>
+      <li ng-if="user" class="sider_list_item"><a class="sider_list_item_btn" href="#document/pre-create">Viết bài mới</a></li>
     </ul>
   </div>
 </snap-drawer>
