--- a/views/my-document.html
+++ b/views/my-document.html
@@ -4,10 +4,12 @@
       <li class="sider_list_item"><a class="sider_list_item_btn" href="#documents">Home</a></li>
       <li ng-if="user" class="sider_list_item"><a class="sider_list_item_btn" href="#account">Tài khoản</a></li>
       <li ng-if="!user" class="sider_list_item"><a class="sider_list_item_btn" href="#login">Đăng nhập</a></li>
-      <li class="sider_list_item"><a class="sider_list_item_btn" href="#friend">Bạn bè</a></li>
-      <li class="sider_list_item"><a class="sider_list_item_btn" href="#message">Tin nhắn</a></li>
-      <li class="sider_list_item"><a class="sider_list_item_btn" href="#collection">Bộ sưu tập</a></li>
-      <li class="sider_list_item"><a class="sider_list_item_btn" href="#document/pre-create">Bài viết mới</a></li>
+      <li ng-if="!user" class="sider_list_item"><a class="sider_list_item_btn" href="#register-form">Đăng kí</a></li>
+      <li ng-if="user" class="sider_list_item"><a class="sider_list_item_btn" href="#friend">Bạn bè</a></li>
+      <li ng-if="user" class="sider_list_item"><a class="sider_list_item_btn" href="#message">Tin nhắn</a></li>
+      <li ng-if="user" class="sider_list_item"><a class="sider_list_item_btn" href="#collection">Bộ sưu tập</a></li>
+      <li ng-if="user" class="sider_list_item"><a class="sider_list_item_btn" href="#my-document">Bài viết của tôi</a></li>
+      <li ng-if="user" class="sider_list_item"><a class="sider_list_item_btn" href="#document/pre-create">Viết bài mới</a></li>
     </ul>
   </div>
 </snap-drawer>
@@ -19,7 +21,20 @@
   </div>
   
 	<div class="container">
-  <p>my document</p>
+  <div id="menu" class="top_bar">
+    <div class="top_bar_block align_left"></div>
+    <div class="top_bar_block align_right"></div>
+  </div>
+  <div class="container">
+  <div ng-repeat="article in documents">
+    <a href="#document/id/{{ article._id }}">
+      <h3 id="article_title">{{ article.title }}</h3>
+          <p id="article_subtitle"/>{{ article.subtitle }}</p>
+    </a>
+    <a ng-click="edit(article._id)">Sửa bài viết</a>
+    <a ng-click="delete(article._id)">Xóa bài viết</a>
+  </div>
+  </div>
 	</div>
 </div>
 </snap-content>
