--- a/views/register-form.html
+++ b/views/register-form.html
@@ -1,3 +1,24 @@
+<snap-drawer>
+  <div id="sider" class="sider">
+    <ul class="sider_list">
+      <li class="sider_list_item"><a class="sider_list_item_btn" href="#documents">Home</a></li>
+      <li ng-if="user" class="sider_list_item"><a class="sider_list_item_btn" href="#account">Tài khoản</a></li>
+      <li ng-if="!user" class="sider_list_item"><a class="sider_list_item_btn" href="#login">Đăng nhập</a></li>
+      <li ng-if="!user" class="sider_list_item"><a class="sider_list_item_btn" href="#register-form">Đăng kí</a></li>
+      <li ng-if="user" class="sider_list_item"><a class="sider_list_item_btn" href="#friend">Bạn bè</a></li>
+      <li ng-if="user" class="sider_list_item"><a class="sider_list_item_btn" href="#message">Tin nhắn</a></li>
+      <li ng-if="user" class="sider_list_item"><a class="sider_list_item_btn" href="#collection">Bộ sưu tập</a></li>
+      <li ng-if="user" class="sider_list_item"><a class="sider_list_item_btn" href="#my-document">Bài viết của tôi</a></li>
+      <li ng-if="user" class="sider_list_item"><a class="sider_list_item_btn" href="#document/pre-create">Viết bài mới</a></li>
+    </ul>
+  </div>
+</snap-drawer>
+<snap-content>
+<div id="wrapper">
+  <div class="fixed">
+  <!-- <span ng-class="{'box_control_disable':disableBoxControl}" class="box_control" snap-toggle="left"></span> -->
+  <span class="box_control" snap-toggle="left"></span>
+</div>
 <div class="container">
 	<form class="form-horizontal">
 <fieldset>
@@ -57,3 +78,5 @@
   </div>
 </form>
 </div>
+</div>
+</snap-content>
